# mri_habitat_analysis

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: normalization.yaml  pyradiomics_habitat.yaml
examples/: 01_clustering_basics.py  02_feature_extraction.py  03_normalization.py  04_full_training_pipeline.py  05_inference_pipeline.py  06_visualization.py
habitat_analysis/: __init__.py  clusterer.py  feature_extractor.py  io_manager.py  normalizer.py  pipeline.py  state.py  visualization.py
scripts/: infer.py  train.py
tests/: conftest.py  test_clusterer.py  test_feature_extractor.py  test_io_manager.py  test_state.py  test_visualization.py
