[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "habitat-analysis"
version = "0.1.0"
description = "Radiomics habitat analysis pipeline for NPC on MRI"
requires-python = ">=3.9, <3.10"
dependencies = [
    "pyradiomics>=3.0.1",
    "mri-normalization-tools>=0.1",
    "SimpleITK>=2.1.1",
    "scikit-learn>=1.0.1",
    "scipy>=1.7.0",
    "scikit-image>=0.19.0",
    "trimesh>=3.9.0",
    "numpy<2.0",
    "matplotlib>=3.4.0",
    "joblib>=1.0.0",
    "tqdm>=4.60.0",
    "rich>=12.0.0",
    "pyyaml>=5.4.0",
    "click>=8.0.0",
    "ipython>=7.0.0",
    "pandas>=1.3.0",
    "pyarrow>=8.0.0",
    "openpyxl>=3.0.0",
    "pickleshare>=0.7.5",
    "pingouin >= 0.4.0"
]

[project.optional-dependencies]
notebook = [
    "ipykernel>=6.0.0",
    "jupyter", 
    "seaborn>=0.11.0",
    "matplotlib", 
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff",
    "habitat-analysis[notebook]",
]

[project.scripts]
habitat-train = "scripts.train:main"
habitat-infer = "scripts.infer:main"

[tool.setuptools.packages.find]
include = ["habitat_analysis*", "scripts*"]

[tool.uv.sources]
mri-normalization-tools = { git = "https://github.com/alabamagan/mri_normalization_tools" }
